# GameShop_project

./: Makefile  README.md  docker-compose.yaml
.github/workflows/: linters.yaml
backend_api/: Dockerfile  pyproject.toml
backend_api/app/: Makefile  app_factory.py  main.py
backend_api/app/applications/auth/: auth_handler.py  router.py  security.py
backend_api/app/applications/database/: base_models.py
backend_api/app/applications/products/: crud.py  models.py  router.py
backend_api/app/applications/users/: crud.py  models.py  router.py  schemas.py
backend_api/app/migrations/: env.py
backend_api/app/migrations/versions/: 2025_07_13_1044-1727442f6f37_add_users_shop.py  2025_08_04_1433-3c1600367c54_add_user_verification_and_admin_fields.py  2025_08_12_1102-f5790fbcefb2_add_product.py
backend_api/app/services/rabbit/: rabbitmq_service.py
backend_api/app/services/s3/: s3.py
documentation/: mkdocs.yml
documentation/docs/: index.md  tasks.md
frontend/: Dockerfile  pyproject.toml
frontend/app/: app_factory.py  settings.py
frontend/app/backend_api/: api.py
frontend/app/routers/: main_page_router.py
frontend/app/templates/: index.html  login.html  product_detail.html  register.html
frontend/app/templates/components/: base.html  login_comp.html  navbar.html  products.html
nginx/: nginx.conf
notification_service/: pyproject.toml
notification_service/app/: main.py  settings.py
notification_service/app/services/rabbit/: handlers.py  rabbitmq_service.py
