[project]
name = "frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey",email = "Andrey827541@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
